--- a/maintemplate.tex
+++ b/maintemplate.tex
@@ -5,7 +5,7 @@
 \usepackage{enumerate,indentfirst,tikz,pgf}
 \usetikzlibrary{mindmap,trees}
 \usetikzlibrary{shadows}
-
+\usepackage{textcomp}
 \usetheme{Warsaw}
 
 \usecolortheme{default}
@@ -18,6 +18,9 @@ shading][bottom=blue!20,top=blue!60]
 %\usecolortheme{seahorse}
 \usefonttheme{professionalfonts}
 
+
+
+\newcommand*{\No}{\textnumero}
 
 % ----------- Дополнительные спецификации ----------
 \newcounter{tasknum}
