Color theme changed

--- a/maintemplate.tex
+++ b/maintemplate.tex
@@ -8,7 +8,8 @@
 \usepackage{textcomp}
 \usetheme{Warsaw}
 
-\usecolortheme{default}
+%\usecolortheme{default}
+\usecolortheme{spruce}
 
 \setbeamertemplate{background canvas} [vertical
 shading][bottom=blue!20,top=blue!60]
