Color scheme changed

--- a/maintemplate.tex
+++ b/maintemplate.tex
@@ -6,13 +6,17 @@
 \usetikzlibrary{mindmap,trees}
 \usetikzlibrary{shadows}
 \usepackage{textcomp}
+
 \usetheme{Warsaw}
 
-%\usecolortheme{default}
-\usecolortheme{spruce}
+
+
+\usecolortheme{default}
+
+\definecolor{darkgreen}{rgb}{0,0.5,0}
 
 \setbeamertemplate{background canvas} [vertical
-shading][bottom=blue!20,top=blue!60]
+shading][bottom=darkgreen!20,top=darkgreen!80]
 
 \setbeamertemplate{blocks}[rounded][shadow=true]
 
