--- a/Lecture2/tasks/lecture2_problems.tex
+++ b/Lecture2/tasks/lecture2_problems.tex
@@ -46,6 +46,17 @@ $$
 
 \task Найти точечные оценки математического ожидания, дисперсии для данных \texttt{data\_p2\_var1}.
 
+\task Вычислить точечные оценки математического ожидания (данные: \texttt{data\_p3\_var1}),  
+ исходя из выборки из нормального распределения с параметрами $\mathcal{N}(3, 2)$:
+$$
+\begin{array}{l}
+\sum\limits_i x_i, \\
+\mbox{медиана}, \\
+\max\limits_i x_i, \\
+\min\limits_i x_i.
+\end{array}
+$$
+Какая из перечисленных оценок является наиболее точной (учитывая, что распределение, для которого получена выборка известно).
 
 
 
@@ -64,7 +75,21 @@ n_i\qquad 1\; 3\; 2\; 4
 \end{array}
 $$
 
- \task Найти точечные оценки математического ожидания, дисперсии для данных \texttt{data\_p2\_var2}.
+\task Найти точечные оценки математического ожидания, дисперсии для данных \texttt{data\_p2\_var2}.
+ 
+ 
+\task Вычислить точечные оценки математического ожидания (данные: \texttt{data\_p3\_var2}),  
+ исходя из выборки из нормального распределения с параметрами $\mathcal{N}(5, 3)$:
+$$
+\begin{array}{l}
+\sum\limits_i x_i, \\
+\mbox{медиана}, \\
+\max\limits_i x_i, \\
+\min\limits_i x_i.
+\end{array}
+$$
+Какая из перечисленных оценок является наиболее точной (учитывая, что распределение, для которого получена выборка известно).
+ 
  
 \end{document}
 
