ten-problems completed

--- a/Lecture2/tasks/lecture2_problems.tex
+++ b/Lecture2/tasks/lecture2_problems.tex
@@ -59,6 +59,42 @@ $$
 Какая из перечисленных оценок является наиболее точной (учитывая, что распределение, для которого получена выборка известно).
 
 
+\task Сгенерировав 1000 тестовых выборок из нормального распределения $\mathcal{N}(0,1)$ размером $3$ убедитесь, что
+выражение для оценки дисперсии $\hat\sigma^2=\dfrac{1}{n-1}\sum\limits_i(x_i-\overline x)^2$, в отличие от
+$\dfrac{1}{n}\sum\limits_i(x_i-\overline x)^2$ является более точной (правильнее несмещенной) оценкой $\sigma^2$.
+
+
+\task Найти выборочную дисперсию по данному расраспределению выборки объема $n=100$:
+$$
+\begin{array}{l}
+x_i\qquad  2502\; 2804\; 2903 \; 3028 \\
+n_i\qquad 8\qquad 30\quad 60\quad\;\; 2
+\end{array}
+$$
+
+
+\task Рассматриваются две оценки математического ожидания: среднее арифметическое значений и медиана. Выполнив имитационное 
+моделирование -- создав 500 выборок размером 100 из равномерного распределения на интервале $[0, 1]$, дать оценку какая из них более эффективна 
+(т.е. обладает меньшей дисперсией).
+  
+
+\task Оценкой максимального правдоподобия называется такая оценка, при которой наблюдаемая реализация наиболее вероятна.
+Найти оценку максимального правдоподобия приживаемости саженцев, если из 100 саженцев прижилось 60.
+
+
+\task Построить интервальные оценки дисперсии и математического ожидания для выборки \texttt{bigdataset\_var1}, 
+полученной из нормального распределения.
+
+
+\task Найти минимальный объем выборки, при котором с надежностью $0.975$ 
+точность оценки математического ожидания $a$ генеральной совокупности по 
+выборочной средней равна  $\delta = 0.2$, 
+если известно среднее квадратическое отклонение $\sigma = 1.1$ 
+нормально распределенной генеральной совокупности.
+
+
+\task В 360 испытаниях, в каждом из которых вероятность появления события одинакова и неизвестна, 
+событие $A$ появилось 270 раз. Найти доверительный интервал, покрывающий неизвестную вероятность $P$ с надежностью 0.95.
 
 
 
@@ -92,8 +128,40 @@ $$
 $$
 Какая из перечисленных оценок является наиболее точной (учитывая, что распределение, для которого получена выборка известно).
  
+\task Сгенерировав 1000 тестовых выборок из нормального распределения $\mathcal{N}(0,1)$ размером $5$ убедитесь, что
+выражение для оценки дисперсии $\hat\sigma^2=\dfrac{1}{n-1}\sum\limits_i(x_i-\overline x)^2$, где 
+$\overline x=\dfrac{1}{n}\sum\limits_i x_i$ в отличие от
+$\dfrac{1}{n}\sum\limits_i(x_i-\overline x)^2$ является более точной (правильнее -- несмещенной) оценкой $\sigma^2$. 
  
+\task Найти выборочную дисперсию по данному расраспределению выборки объема $n=100$:
+$$
+\begin{array}{l}
+x_i\qquad  340\; 360\;375\; 380   \\
+n_i\qquad  20\;\;\; 50\;\;\; 18\;\;\; 12
+\end{array}
+$$
  
+\task Рассматриваются две оценки математического ожидания: среднее арифметическое значений и медиана. Выполнив имитационное 
+моделирование -- создав 400 выборок размером 120 из нормального распределения $\mathcal{N}(1, 1)$, 
+дать оценку какая из них менее эффективна (т.е. обладает большей дисперсией).
+
+\task Оценкой максимального правдоподобия называется такая оценка, при которой наблюдаемая реализация наиболее вероятна.
+Найти оценку максимального правдоподобия приживаемости саженцев, если из 100 саженцев прижилось 30.
+ 
+\task Построить интервальные оценки дисперсии и математического ожидания для выборки \texttt{bigdataset\_var2},
+полученной из нормального распределения.
+
+\task Найти минимальный объем выборки, при котором с надежностью $0.975$ 
+точность оценки математического ожидания $a$ генеральной совокупности по 
+выборочной средней равна  $\delta = 0.3$, 
+если известно среднее квадратическое отклонение $\sigma = 1.2$ 
+нормально распределенной генеральной совокупности.
+
+
+\task Произведено 300 испытаний по схеме Бернулли. Событие $A$ появилось в 250 испытаниях.
+Найти доверительный интервал, покрывающий неизвестную вероятность $P(A)$ c надежностью 0.95.
+
+
  
 \end{document}
 
