Lect2. task 11 completed

--- a/Lecture2/tasks/lecture2_problems.tex
+++ b/Lecture2/tasks/lecture2_problems.tex
@@ -96,6 +96,11 @@ $$
 \task В 360 испытаниях, в каждом из которых вероятность появления события одинакова и неизвестна, 
 событие $A$ появилось 270 раз. Найти доверительный интервал, покрывающий неизвестную вероятность $P$ с надежностью 0.95.
 
+\task Исследуется распределение безразмерного параметра некоторого биологического объекта (например, 
+отношение длины и ширины листовой пластинки, длины и ширины семени и пр.). Возможны два подхода к вычислению среднего
+отношения: $m_1=\dfrac{\sum\limits_i l_i}{\sum\limits_j h_j}$ и $m_2=\mbox{median}\left\{\dfrac{l_i}{h_i}\right\}$, $i=\overline{1\ldots n}$.
+На основе статистического моделирования с выборками из нормального распределения установить какой из этих подходов
+приводит к более эффективной оценке отношения <<длины>> ($l$) и <<высоты>> ($h$) объекта.
 
 
 \clearpage
@@ -160,6 +165,12 @@ $$
 
 \task Произведено 300 испытаний по схеме Бернулли. Событие $A$ появилось в 250 испытаниях.
 Найти доверительный интервал, покрывающий неизвестную вероятность $P(A)$ c надежностью 0.95.
+
+\task Исследуется распределение безразмерного параметра некоторого биологического объекта (например, 
+отношение длины и ширины листовой пластинки, длины и ширины семени и пр.). Возможны два подхода к вычислению среднего
+отношения: $m_1=\dfrac{\sum\limits_i l_i}{\sum\limits_j h_j}$ и $m_2=\dfrac{1}{n}\sum\limits_{i=1}^n\dfrac{l_i}{h_i}$.
+На основе статистического моделирования с выборками из нормального распределения установить какой из этих подходов
+приводит к более эффективной оценке отношения <<длины>> ($l$) и <<высоты>> ($h$) объекта. 
 
 
  
