Tasks for lect2 completed

--- a/Lecture2/tasks/lecture2_problems.tex
+++ b/Lecture2/tasks/lecture2_problems.tex
@@ -51,7 +51,7 @@ $$
 $$
 \begin{array}{l}
 \sum\limits_i x_i, \\
-\mbox{медиана}, \\
+\mbox{median}, \\
 \max\limits_i x_i, \\
 \min\limits_i x_i.
 \end{array}
@@ -102,6 +102,22 @@ $$
 На основе статистического моделирования с выборками из нормального распределения установить какой из этих подходов
 приводит к более эффективной оценке отношения <<длины>> ($l$) и <<высоты>> ($h$) объекта.
 
+\task Создать выборку размером $100$, 
+полученные из так называемого <<усеченного>> нормального распределения с параметрами $\mathcal{N}(1,1)$
+и интервалом определения $[0.5, 1.5]$. Результат представить в виде текстового файла.
+
+
+\task Какова вероятность попадания выборочных данных за пределы $2\sigma$-интервала (где $\sigma^2$ дисперсия распределения)
+относительно среднего  для равномерного распределения?
+
+\task Имеются наборы измерений длины и ширины прямоугольного участка, содержащие  инструментальные ошибки. Если $\{l_i\}$  и $\{w_i\}$
+наборы измерени длины и ширины, то оценку площади можно получить, например, двумя способами: $\dfrac{1}{n}\sum\limits_i l_i\cdot w_i$ и
+$\mbox{median}\{ l_i\}\cdot\mbox{median}\{ w_j\}$. Провести имитационное моделирование с нормально распределенными величинами с целью
+установить, какой из подходов наиболее эффективен (оценка площади имеет наименьшую дисперсию).
+
+\task Выяснить путем имитационного моделирования с выборками из равномерного распределения (на интервале $[-10, 10]$) величину погрешности при
+оценивании математического ожидания и дисперсии, привносимую вследствие группировки данных. Предположить, что группировка осуществляется по 
+10 равным интервалам на инервале $[-10, 10]$.   
 
 \clearpage
 \newpage
@@ -126,7 +142,7 @@ $$
 $$
 \begin{array}{l}
 \sum\limits_i x_i, \\
-\mbox{медиана}, \\
+\mbox{median}, \\
 \max\limits_i x_i, \\
 \min\limits_i x_i.
 \end{array}
@@ -172,7 +188,22 @@ $$
 На основе статистического моделирования с выборками из нормального распределения установить какой из этих подходов
 приводит к более эффективной оценке отношения <<длины>> ($l$) и <<высоты>> ($h$) объекта. 
 
+\task Создать выборку размером $100$, 
+полученные из так называемого <<усеченного>> нормального распределения с параметрами $\mathcal{N}(0,1)$
+и интервалом определения $[-1, 1]$. Результат представить в виде текстового файла.
 
+\task Какова вероятность попадания выборочных данных за пределы $3\sigma$-интервала (где $\sigma^2$ дисперсия распределения) 
+относительно среднего  для равномерного распределения?
+
+
+\task Имеются наборы измерений длины и ширины прямоугольного участка, содержащие  инструментальные ошибки. Если $\{l_i\}$  и $\{w_i\}$
+наборы измерени длины и ширины, то оценку площади можно получить, например, двумя способами: $\dfrac{1}{n}\sum\limits_i l_i\cdot w_i$ и
+$\dfrac{1}{n^2}\sum\limits_i l_i\sum\limits_j w_j$. Провести имитационное моделирование с нормально распределенными величинами с целью
+установить, какой из подходов наиболее эффективен (оценка площади имеет наименьшую дисперсию).
+
+\task Выяснить путем имитационного моделирования с выборками из нормального распределения ($\mathcal{N}(0,1)$) величину погрешности при
+оценивании математического ожидания и дисперсии, привносимую вследствие группировки данных. Предположить, что группировка осуществляется по 
+10 равным интервалам на инервале $[-10, 10]$.   
  
 \end{document}
 
