--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -37,7 +37,10 @@
 
 \task Вычислить меры сходства Серенсена и Жаккара для сравниваемых наборов 
  ['Г', 'А', 'Б', 'И', 'Т', 'У', 'С'] и  ['О', 'Д', 'У', 'В', 'А', 'Н', 'Ч', 'И', 'К']
- без учета порядка входящих букв
+ без учета порядка входящих букв.
+
+\task Сравниваются флористические списки $A$ и $B$. Если к списку $A$ добавить несколько новых, не содержащихся в $B$ видов, 
+как поведет себя мера Жаккара (увеличится, уменьшится, останется неизменной)?
 
 
 
@@ -52,7 +55,11 @@
 \task Вычислить меры сходства Серенсена и Жаккара для сравниваемых наборов 
  ['М', 'О', 'Р', 'К', 'О', 'В', 'К', 'А'] и  ['М', 'А', 'Р', 'Т', 'Ы', 'Ш', 'К', 'А'] с учетом порядка входящих букв.
  
- 
+ \task Сравниваются флористические списки $A$ и $B$. 
+ Если к списку $A$ добавить несколько новых, не содержащихся в списке $B$ видов, 
+как поведет себя мера Серенсена-Дайса (увеличится, уменьшится, останется неизменной)?
+
+
  
  
 \end{document}
