Extra three problems to Lect3

--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -43,6 +43,41 @@
 как поведет себя мера Жаккара (увеличится, уменьшится, останется неизменной)?
 
 
+\task Показать, что в параметризации Б.И. Семкина $K_{0;-1}$ -- совпадает с выражением для коэффициента Серенсена.
+$$
+\begin{array}{l} K_{\tau;\eta} =\left( \dfrac{K_{\tau}^{\eta}(A,B)+K_{\tau}^{\eta}(B,A)}{2}\right)^{1/\eta},
+\\ K_{\tau}(A,B) = \dfrac{|A\cap B|}{(1+\tau)|A|-\tau|A\cap B|},\\
+K_{\tau}(B,A) = \dfrac{|A\cap B|}{(1+\tau)|B|-\tau|A\cap B|} \\ -1<\tau<\infty, -\infty<\eta<\infty \end{array}
+$$
+
+\task Зависит ли скорость изменения коэффициента Жаккара при увеличении числа общих элементов двух сравниваемых множеств,
+если число элементов объединения этих множеств в процессе изменения остается постоянной.
+
+\task Даны два мультимножества, состоящие из символов:
+$$
+\begin{array}{l}
+A = [1,1,2,2,2,4,7,8,9, p, p]
+B = [4, 5, 2,2,2,1,4,4,4,4,q, q]
+\end{array}
+$$
+
+
+
+
+
+\task Чему равна вероятность наблюдать таблицу сопряженности $2\times 2$ следующего вида:
+\begin{table}[H]
+\centering
+\begin{tabular}{l|l|}
+$7$ & $50$  \\\hline
+$45$ & $38$ \\\hline
+\end{tabular}
+\end{table}
+Привести точное выражение для вероятности и вычислить приближенное значение 
+(для вычислений можно использовать среду статистическго анализа R или Python).
+
+
+
 
 
 \clearpage
@@ -59,6 +94,29 @@
  Если к списку $A$ добавить несколько новых, не содержащихся в списке $B$ видов, 
 как поведет себя мера Серенсена-Дайса (увеличится, уменьшится, останется неизменной)?
 
+\task Показать, что в параметризации Б.И. Семкина $K_{1;-1}$ -- совпадает с выражением для коэффициента Жаккара.
+$$
+\begin{array}{l} K_{\tau;\eta} =\left( \dfrac{K_{\tau}^{\eta}(A,B)+K_{\tau}^{\eta}(B,A)}{2}\right)^{1/\eta},
+\\ K_{\tau}(A,B) = \dfrac{|A\cap B|}{(1+\tau)|A|-\tau|A\cap B|},\\
+K_{\tau}(B,A) = \dfrac{|A\cap B|}{(1+\tau)|B|-\tau|A\cap B|} \\ -1<\tau<\infty, -\infty<\eta<\infty \end{array}
+$$
+
+
+\task Зависит ли скорость изменения коэффициента Дайса при увеличении числа общих элементов
+двух сравниваемых множеств, если число элементов объединения этих множеств
+в процессе изменения остается постоянной.
+
+
+\task Чему равна вероятность наблюдать таблицу сопряженности $2\times 2$ следующего вида:
+\begin{table}[H]
+\centering
+\begin{tabular}{l|l|}
+$25$ & $35$  \\\hline
+$4$ & $18$ \\\hline
+\end{tabular}
+\end{table}
+Привести точное выражение для вероятности и вычислить приближенное значение 
+(для вычислений можно использовать среду статистическго анализа R или Python).
 
  
  
