yet another problem added to lecture 3

--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -56,11 +56,11 @@ $$
 \task Даны два мультимножества, состоящие из символов:
 $$
 \begin{array}{l}
-A = [1,1,2,2,2,4,7,8,9, p, p]
-B = [4, 5, 2,2,2,1,4,4,4,4,q, q]
+A = [1,1,2,2,2,4,7,8,9,p,p]
+B = [4,5,2,2,2,1,4,4,4,4,q,q]
 \end{array}
 $$
-
+Вычислить меры Жаккара, Дайса и Кульчинского.
 
 
 
@@ -105,6 +105,18 @@ $$
 \task Зависит ли скорость изменения коэффициента Дайса при увеличении числа общих элементов
 двух сравниваемых множеств, если число элементов объединения этих множеств
 в процессе изменения остается постоянной.
+
+
+\task Рассматривая две строки как мультимножества, состоящие из символов:
+$$
+\begin{array}{l}
+A = 'jaccard1901',
+B = 'dice1948',
+\end{array}
+$$
+вычислить меры Жаккара, Дайса и Кульчинского.
+
+
 
 
 \task Чему равна вероятность наблюдать таблицу сопряженности $2\times 2$ следующего вида:
