--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -65,6 +65,8 @@ $$
 
 
 
+
+
 \task Чему равна вероятность наблюдать таблицу сопряженности $2\times 2$ следующего вида:
 \begin{table}[H]
 \centering
@@ -77,7 +79,9 @@ $45$ & $38$ \\\hline
 (для вычислений можно использовать среду статистическго анализа R или Python).
 
 
-
+\task Для таблицы сопряженности из предыдущей задачи применить критерий $\chi^2$ (при уровне значимости $0.03$)
+с целью исследования зависимости признаков
+(для вычислений можно использовать среду статистическго анализа R или Python).
 
 
 \clearpage
@@ -129,6 +133,11 @@ $4$ & $18$ \\\hline
 \end{table}
 Привести точное выражение для вероятности и вычислить приближенное значение 
 (для вычислений можно использовать среду статистическго анализа R или Python).
+
+\task Для таблицы сопряженности из предыдущей задачи применить критерий $\chi^2$ (при уровне значимости $0.02$)
+с целью исследования зависимости признаков
+(для вычислений можно использовать среду статистическго анализа R или Python).
+ 
 
  
  
