Graph problems added

--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -84,6 +84,43 @@ $45$ & $38$ \\\hline
 (для вычислений можно использовать среду статистическго анализа R или Python).
 
 
+\task Граф задан матрицей инциденций. Найти его матрицу смежности.
+$$
+\begin{array}{lllllll}
+1 & 0 & 0 & 0 & 0 & 0 & 1 \\
+0 & 1 & 0 & 0 & 0 & 1 & 1 \\
+1 & 0 & 0 & 1 & 0 & 0 & 0 \\
+0 & 1 & 1 & 1 & 0 & 0 & 0 \\
+0 & 1 & 1 & 0 & 1 & 0 & 0 
+\end{array}
+$$
+
+\task В результате исследования 100 пробных площадей были вычислены их попарные меры сходства. 
+Сходство между пробными площадями считали существенным, если между $i$-й и $j$-й площадками
+вычисленный коэффициент был больше заданного порога. По результатам анализа всех комбинаций была
+построена матрица смежности: если сходство между $i$ и $j$ было существенным, то соответствующий $(i,j)$-элемент
+матрицы выбирался равным 1, в противном случае 0. Найти все совокупности сходных групп пробных площадей, являющиеся
+компонентами связности графа заданного построенной матрицей смежности. Матрица смежности дана в файле: 
+\texttt{lec3_datamat_var1.dat}
+
+
+
+\task Граф задан матрицей смежности. Найти его матрицу инциденций.
+$$
+\begin{array}{llll}
+0 & 1 & 1 & 1\\
+1 & 0 & 1 & 1\\
+1 & 1 & 0 & 1\\
+1 & 1 & 1 & 0\\
+\end{array}
+$$
+
+
+
+\task Чему равна сумма элементов матрицы инциденций для полного графа с числом вершин $n$?
+
+
+
 \clearpage
 \newpage
 \section*{Задания к лекции 3. Анализ нечисловых данных.}
@@ -139,6 +176,31 @@ $4$ & $18$ \\\hline
 (для вычислений можно использовать среду статистическго анализа R или Python).
  
 
+\task Граф задан матрицей инциденций. Найти его матрицу смежности.
+$$
+\begin{array}{lllllll}
+0 & 1 & 1 & 1 & 0 & 0 & 0 \\
+0 & 0 & 0 & 0 & 1 & 1 & 0 \\
+1 & 0 & 1 & 0 & 1 & 0 & 0 \\
+0 & 0 & 1 & 1 & 1 & 0 & 0 \\
+1 & 1 & 1 & 0 & 1 & 0 & 0 
+\end{array}
+$$
+
+\task В результате исследования 100 пробных площадей были вычислены их попарные меры сходства. 
+Сходство между пробными площадями считали существенным, если между $i$-й и $j$-й площадками
+вычисленный коэффициент был больше заданного порога. По результатам анализа всех комбинаций была
+построена матрица смежности: если сходство между $i$ и $j$ было существенным, то соответствующий $(i,j)$-элемент
+матрицы выбирался равным 1, в противном случае 0. Найти все совокупности сходных групп пробных площадей, являющиеся
+компонентами связности графа заданного построенной матрицей смежности. Матрица смежности дана в файле: 
+\texttt{lec3_datamat_var2.dat}
+
+
+\task Граф задан матрицей смежности. Найти его матрицу инциденций.
+
+
+
+\task Чему равна сумма элементов матрицы смежности для полного графа с числом вершин $n$? 
  
  
 \end{document}
