11 tasks lect 3 completed

--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -197,7 +197,15 @@ $$
 
 
 \task Граф задан матрицей смежности. Найти его матрицу инциденций.
-
+$$
+\begin{array}{lllll}
+0 & 0 & 1 & 1 & 1\\
+0 & 1 & 0 & 0 & 0\\
+0 & 0 & 0 & 0 & 1\\
+0 & 1 & 1 & 0 & 0\\
+1 & 0 & 1 & 1 & 0\\
+\end{array}
+$$
 
 
 \task Чему равна сумма элементов матрицы смежности для полного графа с числом вершин $n$? 
