2 problems to Lect3

--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -63,7 +63,28 @@ $$
 Вычислить меры Жаккара, Дайса и Кульчинского.
 
 
+\task Вычислить меру Дайса для двух списков (с повторениями) видов \texttt{lec3_measures_var1.dat}.
+\begin{tabular}{ll}
+Caldesia reniformis;&Caldesia reniformis\\
+Caldesia reniformis;&Strobilanthes isophyllus\\
+Strobilanthes isophyllus;&Onychium japonicum\\
+Pseuderanthemum atropurpureum;&Agave filifera\\
+Caldesia reniformis;&Allium spirale\\
+\end{tabular} 
+\ldots
 
+
+\task Исследуется эффективность действия удобрения на рост растений. Для этого 100 тестовых образцов 
+были разделены в пропорции 2:3 на тестовые (не подвергавшиеся обработки удобрением) и остальные, которые
+подлежали обработке. Через месяц был произведен  учет растений, в результате которого были подсчитаны растения
+показавшие 10 сантиметровый прирост.
+\begin{tabular}{l|l|l|l}
+&  не удобрено & удобрено & $\sum$ \\ \hline
+прирост>$10$ см & $10$ & $43$ & $53$ \\\hline
+прирост<$10$ см & $30$ & $17$ & $47$ \\\hline
+$\sum$ & $40$ & $60$ & $100$
+\end{tabular}
+Можно ли сказать, что данные результаты не следствие случая, а действия удобрения?
 
 
 
@@ -121,6 +142,7 @@ $$
 
 
 
+
 \clearpage
 \newpage
 \section*{Задания к лекции 3. Анализ нечисловых данных.}
@@ -157,7 +179,28 @@ B = 'dice1948',
 $$
 вычислить меры Жаккара, Дайса и Кульчинского.
 
+\task Вычислить меру Жаккара для двух списков (с повторениями) видов \texttt{lec3_measures_var2.dat}.
+\begin{tabular}{ll}
+Agave stricta; &Lithops aucampiae\\
+Aloe aristata; &Pseuderanthemum atropurpureum\\
+Aloe aristata; &Allium schoenoprasum\\
+Plumeria rubra; &Hosta rectifolia\\
+Allium spirale;&Allium schoenoprasum\\
+\end{tabular} 
+\ldots
 
+
+\task Исследуется эффективность действия удобрения на рост растений. Для этого 100 тестовых образцов 
+были разделены в пропорции 1:3 на тестовые (не подвергавшиеся обработки удобрением) и остальные, которые
+подлежали обработке. Через месяц был произведен  учет растений, в результате которого были подсчитаны растения
+показавшие 10 сантиметровый прирост.
+\begin{tabular}{l|l|l|l}
+&  не удобрено & удобрено & $\sum$ \\ \hline
+прирост>$10$ см & $6$ & $18$ & $24$ \\\hline
+прирост<$10$ см & $19$ & $57$ & $76$ \\\hline
+$\sum$ & $25$ & $75$ & $100$
+\end{tabular}
+Можно ли сказать, что данные результаты не следствие случая, а действия удобрения?
 
 
 \task Чему равна вероятность наблюдать таблицу сопряженности $2\times 2$ следующего вида:
