Verify Dice or Jaccard: a problem

--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -74,6 +74,11 @@ Caldesia reniformis;&Allium spirale\\
 \ldots
 
 
+\task Вы сравниваете флористические списки. Матрица мер сходства Жаккара успешно посчитана до вас, но содержит ошибки.
+Попробуйте определить при сравнении каких именно списков (они нумеруются по строкам\столбцам матрицы)
+была допущена ошибка. Матрица дана в файле \texttt{lec3_bigmat_var1.dat}
+
+
 \task Исследуется эффективность действия удобрения на рост растений. Для этого 100 тестовых образцов 
 были разделены в пропорции 2:3 на тестовые (не подвергавшиеся обработки удобрением) и остальные, которые
 подлежали обработке. Через месяц был произведен  учет растений, в результате которого были подсчитаны растения
@@ -98,6 +103,7 @@ $45$ & $38$ \\\hline
 \end{table}
 Привести точное выражение для вероятности и вычислить приближенное значение 
 (для вычислений можно использовать среду статистическго анализа R или Python).
+
 
 
 \task Для таблицы сопряженности из предыдущей задачи применить критерий $\chi^2$ (при уровне значимости $0.03$)
@@ -188,6 +194,10 @@ Plumeria rubra; &Hosta rectifolia\\
 Allium spirale;&Allium schoenoprasum\\
 \end{tabular} 
 \ldots
+
+\task Вы сравниваете флористические списки. Матрица мер сходства успешно посчитана до вас, но содержит ошибки.
+Попробуйте определить при сравнении каких именно списков (они нумеруются по строкам\столбцам матрицы)
+была допущена ошибка. Матрица дана в файле \texttt{lec3_bigmat_var2.dat}
 
 
 \task Исследуется эффективность действия удобрения на рост растений. Для этого 100 тестовых образцов 
