We able to draw graphs now

--- a/maintemplate.tex
+++ b/maintemplate.tex
@@ -7,6 +7,8 @@
 \usetikzlibrary{shadows}
 \usepackage{textcomp}
 
+%This libraries needed to draw graphs (lecture 3)
+\usetikzlibrary{arrows,shapes,positioning}
 
 \usetheme{Warsaw}
 
