--- a/Lecture1/tasks/practice1_intro.ipynb
+++ b/Lecture1/tasks/practice1_intro.ipynb
@@ -3344,7 +3344,7 @@
     "editable": true
    },
    "source": [
-    "## Classes"
+    "## Классы"
    ]
   },
   {
@@ -3354,24 +3354,22 @@
     "editable": true
    },
    "source": [
-    "Classes are the key features of object-oriented programming. A class is a structure for representing an object and the operations that can be performed on the object. \n",
+    "Объектно-ориентированное программирование подразумевает создание объектов с какими-либо свойствами, выполнение операций над этим объектами и их взаимодействие. Такой подход позволяет структурировать программный код, сделать его более понятным. Гораздо проще работать, например, с объектом rectange, имеющим своими аттрибутами ширину и длину, а также в качестве одного из методов, например, функцию площади, чем представлять, что какой-либо список из двух значений, и представляет наш прямоугольник. Работать с таким списком, каждый раз помнить, что он отвечает именно за определенный прямоугольник, было бы гораздо сложней, особенно, если таких прямоугольников было бы много.\n",
     "\n",
-    "In Python a class can contain *attributes* (variables) and *methods* (functions).\n",
+    "Для создания произвольных объектов в Python используется ключевое слово `class`. Создаваемый объект при этом имеет набор принадлежащих ему *аттрибутов* и *методов*.\n",
     "\n",
-    "A class is defined almost like a function, but using the `class` keyword, and the class definition usually contains a number of class method definitions (a function in a class).\n",
+    "* Каждый метод класса должен иметь в качестве первой переменной `self`, обозначающей представителя данного класса. \n",
     "\n",
-    "* Each class method should have an argument `self` as its first argument. This object is a self-reference.\n",
+    "* Есть специальные служебные методы класса, например:\n",
     "\n",
-    "* Some class method names have special meaning, for example:\n",
-    "\n",
-    "    * `__init__`: The name of the method that is invoked when the object is first created.\n",
-    "    * `__str__` : A method that is invoked when a simple string representation of the class is needed, as for example when printed.\n",
-    "    * There are many more, see http://docs.python.org/2/reference/datamodel.html#special-method-names"
+    "    * `__init__`: вызывается, когда объект класса только создается;\n",
+    "    * `__str__` : отображает информацию об объекте;\n",
+    "Другие специальные методы могут быть найдены в официальной документации по Python."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -3388,6 +3386,7 @@
     "        \"\"\"\n",
     "        Create a new Point at x, y.\n",
     "        \"\"\"\n",
+    "        print('Hey! I am __init__ function...!')\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        \n",
@@ -3409,7 +3408,7 @@
     "editable": true
    },
    "source": [
-    "To create a new instance of a class:"
+    "Создание экземпляра класса происходит следующим образом:"
    ]
   },
   {
@@ -3442,7 +3441,7 @@
     "editable": true
    },
    "source": [
-    "To invoke a class method in the class instance `p`:"
+    "Давайте сделаем что-либо с объектом `p` с помощью метода `translate`:"
    ]
   },
   {
@@ -3479,529 +3478,7 @@
     "editable": true
    },
    "source": [
-    "Note that calling class methods can modifiy the state of that particular class instance, but does not effect other class instances or any global variables.\n",
-    "\n",
-    "That is one of the nice things about object-oriented design: code such as functions and related variables are grouped in separate and independent entities. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Modules"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "One of the most important concepts in good programming is to reuse code and avoid repetitions.\n",
-    "\n",
-    "The idea is to write functions and classes with a well-defined purpose and scope, and reuse these instead of repeating similar code in different part of a program (modular programming). The result is usually that readability and maintainability of a program is greatly improved. What this means in practice is that our programs have fewer bugs, are easier to extend and debug/troubleshoot. \n",
-    "\n",
-    "Python supports modular programming at different levels. Functions and classes are examples of tools for low-level modular programming. Python modules are a higher-level modular programming construct, where we can collect related variables, functions and classes in a module. A python module is defined in a python file (with file-ending `.py`), and it can be made accessible to other Python modules and programs using the `import` statement. \n",
-    "\n",
-    "Consider the following example: the file `mymodule.py` contains simple example implementations of a variable, function and a class:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing mymodule.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file mymodule.py\n",
-    "\"\"\"\n",
-    "Example of a python module. Contains a variable called my_variable,\n",
-    "a function called my_function, and a class called MyClass.\n",
-    "\"\"\"\n",
-    "\n",
-    "my_variable = 0\n",
-    "\n",
-    "def my_function():\n",
-    "    \"\"\"\n",
-    "    Example function\n",
-    "    \"\"\"\n",
-    "    return my_variable\n",
-    "    \n",
-    "class MyClass:\n",
-    "    \"\"\"\n",
-    "    Example class.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.variable = my_variable\n",
-    "        \n",
-    "    def set_variable(self, new_value):\n",
-    "        \"\"\"\n",
-    "        Set self.variable to a new value\n",
-    "        \"\"\"\n",
-    "        self.variable = new_value\n",
-    "        \n",
-    "    def get_variable(self):\n",
-    "        return self.variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "We can import the module `mymodule` into our Python program using `import`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "import mymodule"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Use `help(module)` to get a summary of what the module provides:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on module mymodule:\n",
-      "\n",
-      "NAME\n",
-      "    mymodule\n",
-      "\n",
-      "FILE\n",
-      "    /Users/rob/Desktop/scientific-python-lectures/mymodule.py\n",
-      "\n",
-      "DESCRIPTION\n",
-      "    Example of a python module. Contains a variable called my_variable,\n",
-      "    a function called my_function, and a class called MyClass.\n",
-      "\n",
-      "CLASSES\n",
-      "    MyClass\n",
-      "    \n",
-      "    class MyClass\n",
-      "     |  Example class.\n",
-      "     |  \n",
-      "     |  Methods defined here:\n",
-      "     |  \n",
-      "     |  __init__(self)\n",
-      "     |  \n",
-      "     |  get_variable(self)\n",
-      "     |  \n",
-      "     |  set_variable(self, new_value)\n",
-      "     |      Set self.variable to a new value\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    my_function()\n",
-      "        Example function\n",
-      "\n",
-      "DATA\n",
-      "    my_variable = 0\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(mymodule)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mymodule.my_variable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mymodule.my_function() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_class = mymodule.MyClass() \n",
-    "my_class.set_variable(10)\n",
-    "my_class.get_variable()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "If we make changes to the code in `mymodule.py`, we need to reload it using `reload`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'mymodule' from 'mymodule.pyc'>"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reload(mymodule)  # works only in python 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Exceptions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "In Python errors are managed with a special language construct called \"Exceptions\". When errors occur exceptions can be raised, which interrupts the normal program flow and fallback to somewhere else in the code where the closest try-except statement is defined."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "To generate an exception we can use the `raise` statement, which takes an argument that must be an instance of the class `BaseException` or a class derived from it. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "description of the error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-128-8f47ba831d5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"description of the error\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mException\u001b[0m: description of the error"
-     ]
-    }
-   ],
-   "source": [
-    "raise Exception(\"description of the error\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "A typical use of exceptions is to abort functions when some error condition occurs, for example:\n",
-    "\n",
-    "    def my_function(arguments):\n",
-    "    \n",
-    "        if not verify(arguments):\n",
-    "            raise Exception(\"Invalid arguments\")\n",
-    "        \n",
-    "        # rest of the code goes here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "To gracefully catch errors that are generated by functions and class methods, or by the Python interpreter itself, use the `try` and  `except` statements:\n",
-    "\n",
-    "    try:\n",
-    "        # normal code goes here\n",
-    "    except:\n",
-    "        # code for error handling goes here\n",
-    "        # this code is not executed unless the code\n",
-    "        # above generated an error\n",
-    "\n",
-    "For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test\n",
-      "Caught an exception\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    print(\"test\")\n",
-    "    # generate an error: the variable test is not defined\n",
-    "    print(test)\n",
-    "except:\n",
-    "    print(\"Caught an exception\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "To get information about the error, we can access the `Exception` class instance that describes the exception by using for example:\n",
-    "\n",
-    "    except Exception as e:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test\n",
-      "Caught an exception:name 'test' is not defined\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    print(\"test\")\n",
-    "    # generate an error: the variable test is not defined\n",
-    "    print(test)\n",
-    "except Exception as e:\n",
-    "    print(\"Caught an exception:\" + str(e))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Further reading"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "* http://www.python.org - The official web page of the Python programming language.\n",
-    "* http://www.python.org/dev/peps/pep-0008 - Style guide for Python programming. Highly recommended. \n",
-    "* http://www.greenteapress.com/thinkpython/ - A free book on Python programming.\n",
-    "* [Python Essential Reference](http://www.amazon.com/Python-Essential-Reference-4th-Edition/dp/0672329786) - A good reference book on Python programming."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Versions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "Software versions": [
-        {
-         "module": "Python",
-         "version": "2.7.10 64bit [GCC 4.2.1 (Apple Inc. build 5577)]"
-        },
-        {
-         "module": "IPython",
-         "version": "3.2.1"
-        },
-        {
-         "module": "OS",
-         "version": "Darwin 14.1.0 x86_64 i386 64bit"
-        }
-       ]
-      },
-      "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.10 64bit [GCC 4.2.1 (Apple Inc. build 5577)]</td></tr><tr><td>IPython</td><td>3.2.1</td></tr><tr><td>OS</td><td>Darwin 14.1.0 x86_64 i386 64bit</td></tr><tr><td colspan='2'>Sat Aug 15 10:51:55 2015 JST</td></tr></table>"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{|l|l|}\\hline\n",
-       "{\\bf Software} & {\\bf Version} \\\\ \\hline\\hline\n",
-       "Python & 2.7.10 64bit [GCC 4.2.1 (Apple Inc. build 5577)] \\\\ \\hline\n",
-       "IPython & 3.2.1 \\\\ \\hline\n",
-       "OS & Darwin 14.1.0 x86\\_64 i386 64bit \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Sat Aug 15 10:51:55 2015 JST} \\\\ \\hline\n",
-       "\\end{tabular}\n"
-      ],
-      "text/plain": [
-       "Software versions\n",
-       "Python 2.7.10 64bit [GCC 4.2.1 (Apple Inc. build 5577)]\n",
-       "IPython 3.2.1\n",
-       "OS Darwin 14.1.0 x86_64 i386 64bit\n",
-       "Sat Aug 15 10:51:55 2015 JST"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%load_ext version_information\n",
-    "\n",
-    "%version_information"
+    "Важно отметить, что при работе с представителями класса меняются индивидуальные их аттрибуты, у других представителей значения аттрибут остаются прежними. Это позволяет работать с каждым объектом индивидуально, что очень важно для концепции объектно-ориентированного программирования."
    ]
   }
  ],
