--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -54,9 +54,9 @@ $$
 K_{\tau}(B,A) = \dfrac{|A\cap B|}{(1+\tau)|B|-\tau|A\cap B|} \\ -1<\tau<\infty, -\infty<\eta<\infty \end{array}
 $$
 
-\task Зависит ли скорость изменения коэффициента Жаккара при увеличении числа общих элементов двух сравниваемых множеств,
+\task  Какова скорость изменения коэффициента Жаккара при увеличении числа общих элементов двух сравниваемых множеств,
 если число элементов объединения этих множеств в процессе изменения остается постоянной.
-
+ь
 \task Даны два мультимножества, состоящие из символов:
 $$
 \begin{array}{l}
@@ -210,7 +210,7 @@ K_{\tau}(B,A) = \dfrac{|A\cap B|}{(1+\tau)|B|-\tau|A\cap B|} \\ -1<\tau<\infty, 
 $$
 
 
-\task Зависит ли скорость изменения коэффициента Дайса при увеличении числа общих элементов
+\task Какова скорость изменения коэффициента Дайса при увеличении числа общих элементов
 двух сравниваемых множеств, если число элементов объединения этих множеств
 в процессе изменения остается постоянной.
 
